# repetition-hunter-py

./: .gitignore  CHANGE_LOG.md  LICENSE  MANIFEST.in  README.md  __init__.py  deploy.sh  pyproject.toml  repetition_hunter.py  setup.py  test_sample.py
.claude/: settings.local.json
python_repetition_hunter/: __init__.py  repetition_hunter.py
python_repetition_hunter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: __init__.py  test_repetition_hunter.py
